api key deleted

--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- TODO: Add your Google Maps API key here -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHTIP2dof4GXU04JakIRYo-Szr8RlReLk"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=API-KEY-HERE"></script>
 
   <title>google_maps_in_flutter</title>
   <link rel="manifest" href="manifest.json">
